# src/ae/infrastructure/adapter_in/openapi.rs
@@ -36,8 +36,8 @@ use utoipa::OpenApi;
         super::trade_settings::controller::get_trade_binders,
         super::trade_settings::controller::add_trade_binder,
         super::trade_settings::controller::remove_trade_binder,
-        super::trade_settings::controller::get_trade_rarities,
-        super::trade_settings::controller::set_trade_rarity,
+        super::trade_settings::controller::get_trade_rarity_filters,
+        super::trade_settings::controller::set_trade_rarity_filter,
         super::search::controller::search_cards,
         super::card::controller::get_card_info,
         super::card::controller::get_card_price_history,
